# docs/swagger.json
@@ -149,6 +149,54 @@
             }
         },
         "/examservice/exams/{id}": {
+            "get": {
+                "description": "Retrieve an exam based on the provided exam ID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Exams"
+                ],
+                "summary": "Get an exam by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Exam ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Exam"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.CustomError"
+                        }
+                    },
+                    "404": {
+                        "description": "Exam not found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.CustomError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.CustomError"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "Deletes an exam by its ID.",
                 "consumes": [
@@ -311,6 +359,54 @@
             }
         },
         "/examservice/questions/{id}": {
+            "get": {
+                "description": "Retrieves a question based on the provided ID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Questions"
+                ],
+                "summary": "Retrieve a question by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Question ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "schema": {
+                            "$ref": "#/definitions/dto.QuestionByIdResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.CustomError"
+                        }
+                    },
+                    "404": {
+                        "description": "Question not found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.CustomError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.CustomError"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "Deletes a question by its ID.",
                 "consumes": [
@@ -376,6 +472,9 @@
                 },
                 "examId": {
                     "type": "string"
+                },
+                "result": {
+                    "$ref": "#/definitions/dto.Result"
                 },
                 "userId": {
                     "type": "string"
@@ -578,8 +677,22 @@
                 "answer": {
                     "type": "string"
                 },
+                "correctAnswer": {
+                    "type": "string"
+                },
                 "questionId": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.QuestionByIdResponse": {
+            "type": "object",
+            "properties": {
+                "question": {
+                    "$ref": "#/definitions/dto.Question"
+                },
+                "statusCode": {
+                    "type": "integer"
                 }
             }
         },
@@ -616,6 +729,17 @@
                     "type": "string"
                 },
                 "statusCode": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.Result": {
+            "type": "object",
+            "properties": {
+                "attempted": {
+                    "type": "integer"
+                },
+                "correct": {
                     "type": "integer"
                 }
             }
